--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,13 @@
             <artifactId>quarkus-junit5</artifactId>
             <scope>test</scope>
         </dependency>
-<!--        <dependency>-->
+        <dependency>
+            <groupId>org.eclipse.jkube</groupId>
+            <artifactId>openshift-maven-plugin</artifactId>
+            <version>1.18.1</version>
+        </dependency>
+
+        <!--        <dependency>-->
 <!--            <groupId>io.quarkus</groupId>-->
 <!--            <artifactId>quarkus-openshift</artifactId>-->
 <!--        </dependency>-->
